<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    android:id="@+id/main_bottomsheet">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/main_txt_res_name"

            android:layout_width="wrap_content"
            android:layout_height="40dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            android:layout_marginTop="20dp"
            android:textColor="@color/colorAccent"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="Restaurant"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_layout_rating"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_txt_res_name">
            <RatingBar
                android:id="@+id/main_rating"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"

                android:numStars="5"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/main_recycler"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintBottom_toTopOf="@+id/main_table"
            app:layout_constraintTop_toBottomOf="@+id/main_layout_rating"

            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:id="@+id/main_table"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@+id/main_recycler"

            android:padding="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/main_txt_address"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/all_ship_at"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/od_ship_fee"/>
                <TextView
                    android:id="@+id/main_txt_ship"

                    android:gravity="right"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/od_quantity"/>
                <TextView
                    android:id="@+id/main_txt_quantity_total"

                    android:gravity="right"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textStyle="bold"
                    android:text="@string/od_price"/>
                <TextView
                    android:id="@+id/main_txt_price_total"

                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:gravity="right"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/main_card_order"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@+id/main_table"

            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="5dp"
            app:cardCornerRadius="5dp"
            app:cardBackgroundColor="@color/colorPrimary">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:text="@string/main_bts_order"/>
        </androidx.cardview.widget.CardView>
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"

            app:layout_constraintTop_toBottomOf="@+id/main_card_order"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>