<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderDetailActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/od_txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toTopOf="parent"

                android:padding="10dp"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textStyle="bold"
                android:text="Order from Haustore"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/od_recycler"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toBottomOf="@+id/od_txt_title"/>
            <LinearLayout
                android:id="@+id/od_table"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toBottomOf="@+id/od_recycler"

                android:padding="5dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/od_txt_address_from"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/all_ship_at"/>
                <TextView
                    android:id="@+id/od_txt_address_to"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/all_ship_at"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/od_ship_fee"/>
                    <TextView
                        android:id="@+id/od_txt_date"

                        android:textColor="@color/colorPrimary"
                        android:gravity="right"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/od_ship_fee"/>
                    <TextView
                        android:id="@+id/od_txt_ship"

                        android:textColor="@color/colorPrimary"
                        android:gravity="right"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/od_quantity"/>
                    <TextView
                        android:id="@+id/od_txt_quantity_total"

                        android:textColor="@color/colorPrimary"
                        android:gravity="right"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:textStyle="bold"
                        android:text="@string/od_price"/>
                    <TextView
                        android:id="@+id/od_txt_price_total"

                        android:textStyle="bold"
                        android:textColor="@color/colorAccent"
                        android:gravity="right"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>
            </LinearLayout>
            <androidx.cardview.widget.CardView
                android:id="@+id/od_card_btn"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toBottomOf="@+id/od_table"

                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="5dp"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="@color/colorDisable">
                <TextView
                    android:id="@+id/od_txt_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:text="@string/od_cancel"
                    android:layout_margin="10dp"
                    android:layout_gravity="center" />
            </androidx.cardview.widget.CardView>
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"

                app:layout_constraintTop_toBottomOf="@+id/od_card_btn"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>